implemented `leptos_router`

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -23,6 +23,9 @@ body {
   align-content: center;
   text-align: center;
 }
-.textStyle {
+.titleStyle {
   font-size: 10rem;
+}
+.textStyle {
+  font-size: 4rem;
 }
