--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,7 +1,7 @@
 @font-face {
-	font-family: "uncutSans";
-	src: url(./fonts/Uncut-Sans-Regular.otf);
-	font-style: normal;
+  font-family: 'uncutSans';
+  src: url(./fonts/Uncut-Sans-Regular.otf);
+  font-style: normal;
 }
 html {
   padding: 0;
@@ -14,6 +14,7 @@ body {
   width: 100%;
   height: 100%;
   background-color: #ffbfd9;
+  color: #292929;
   font-size: 2rem;
   font-family: uncutSans;
 }
@@ -23,6 +24,23 @@ body {
   align-content: center;
   text-align: center;
 }
+
+.navContainer {
+  margin: auto;
+  display: flexbox;
+  justify-content: space-between;
+  text-align: center;
+}
+.navText {
+  margin: auto;
+  padding: 2rem;
+  justify-content: space-between;
+  color: #292929;
+}
+.navText:link, .navText:visited {
+  text-decoration: none;
+}
+
 .titleStyle {
   font-size: 10rem;
 }
